# adage

./: Cargo.toml  Makefile  README.md
adage_core/: Cargo.toml
adage_core/src/: lib.rs
adage_macros/: Cargo.toml
adage_macros/src/: lib.rs
examples/: simple.rs
src/: executor.rs  lib.rs  links.rs  tasks.rs
