[package]
name = "adage"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [".", "adage_macros"]

[dependencies]
adage_macros = { path = "adage_macros" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[[example]]
name = "simple"
